testing cloudflare ips only

--- a/cluster/apps/networking/ingressroutes/lidarr-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/lidarr-ingressroute.yaml
@@ -11,6 +11,8 @@ spec:
     - match: "Host(`lidarr.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       middlewares:
+      - name: cloudflare-only
+        namespace: networking
       - name: chain-authelia-auth
         namespace: auth
       services:
