--- a/cluster/apps/networking/middlewares/cloudflare-only.yaml
+++ b/cluster/apps/networking/middlewares/cloudflare-only.yaml
@@ -35,6 +35,8 @@ spec:
       - 10.0.0.0/8
       - 172.16.0.0/12
       - 192.168.0.0/16
+    ipstrategy:
+      depth: 1
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
