--- a/cluster/apps/networking/middlewares/cloudflare-only.yaml
+++ b/cluster/apps/networking/middlewares/cloudflare-only.yaml
@@ -35,7 +35,7 @@ spec:
       - 10.0.0.0/8
       - 172.16.0.0/12
       - 192.168.0.0/16
-    ipstrategy:
+    ipStrategy:
       depth: 1
 ---
 apiVersion: traefik.containo.us/v1alpha1
