traefik logs enable

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -41,3 +41,8 @@ spec:
         exposedPort: 80
       websecure:
         exposedPort: 443  
+    logs:
+      general:
+        level: info
+      access:
+        enabled: true
