--- a/cluster/apps/default/grafana/helm-release.yaml
+++ b/cluster/apps/default/grafana/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        existingClaim: pvc-grafana
     admin: 
       existingSecret: grafana-secrets
       userKey: admin-user
