--- a/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
@@ -7,6 +7,9 @@ metadata:
 spec:
   entryPoints:
     - websecure
+  annotations:
+    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+    external-dns/is-public: "true"
   routes:
     - match: "Host(`auth.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
