--- a/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
@@ -1,3 +1,16 @@
+apiVersion: externaldns.k8s.io/v1alpha1
+kind: DNSEndpoint
+metadata:
+  name: authelia-cloudflare-dns
+spec:
+  endpoints:
+  - dnsName: "auth.${SECRET_PUBLIC_DOMAIN}"
+    # recordTTL: 180
+    recordType: CNAME
+    targets:
+    - "ipv4.${SECRET_PUBLIC_DOMAIN}"
+
+---
 
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
