--- a/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
@@ -1,14 +1,13 @@
-apiVersion: externaldns.k8s.io/v1alpha1
-kind: DNSEndpoint
+# This is necessary because external dns doesnt support ingressroutes yet
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
 metadata:
   name: authelia-cloudflare-dns
+  annotations:
+    kubernetes.io/ingress.class: traefik
 spec:
-  endpoints:
-  - dnsName: "auth.${SECRET_PUBLIC_DOMAIN}"
-    # recordTTL: 180
-    recordType: CNAME
-    targets:
-    - "ipv4.${SECRET_PUBLIC_DOMAIN}"
+  rules:
+    - host: "auth.${SECRET_PUBLIC_DOMAIN}"
 
 ---
 
