--- a/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
@@ -1,5 +1,5 @@
 # This is necessary because external dns doesnt support ingressroutes yet
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: authelia-cloudflare-dns
