--- a/cluster/apps/networking/error-pages/helm-release.yaml
+++ b/cluster/apps/networking/error-pages/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
       tag: 2.15.0
     env:
       TEMPLATE_NAME: ghost
-      SHOW_DETAILS: "true"
+      SHOW_DETAILS: "false"
     resources:
       requests:
         memory: 100Mi
