--- a/cluster/apps/default/overseerr/helm-release.yaml
+++ b/cluster/apps/default/overseerr/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: kah-common-chart
+      chart: overseerr
       version: 1.1.2
       sourceRef:
         kind: HelmRepository
