changed smtp details

--- a/cluster/apps/auth/authelia/secret.sops.yaml
+++ b/cluster/apps/auth/authelia/secret.sops.yaml
@@ -5,13 +5,13 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:l60ZlV2m/Nq6TDsaG7TAI3WnVirsJtJwLCCQRn4k,iv:f7JgbzzHi60f9R//2Y0OMMr1PEY8hxRBKLT9VrzkHy4=,tag:IpsiysgqZRYtMewy+LZoeQ==,type:str]
-    redis_password: ENC[AES256_GCM,data:iYcs3UeI4MBJes7zLLoupE3dhOXM0y48+CRZDdOr,iv:GjrbZwiMKsZmg6xLv9IevQ6YxlVcfBWyyoXwtVrRR98=,tag:kEZ0yevxEtcU0f977fB1Yw==,type:str]
-    authelia_jwt: ENC[AES256_GCM,data:x9eGZ3ve3hyeNhuREzA6AXQRHw5AUPz6onyh3u+FQmu1PGcQmf+WfSGhozruH+A/waWq76VHPeHERQH4KPGPYwuuQvO/xAPiij1HK59yongmGyGSWFQ+pc4I,iv:3uZg8eefXoJIm1FP8p9NZjdDaQ7I4hIdoN4MHdUWTvM=,tag:aPofw24o3jlrL9rfcD+j3Q==,type:str]
-    postgresql_password: ENC[AES256_GCM,data:R5hwP202q1hhUX7W21lNUm2RxJgsbybdqx4DYYY+,iv:y7XTakZSWVLoiljXkkc1wez7WhXnSNyG4fqxk818xIc=,tag:0RFHZC7ZDwojKBRH+FCXEQ==,type:str]
-    smtp_password: ENC[AES256_GCM,data:GqF2254mGYLmLC8F/ZtV,iv:B9Oxb7CJxJ8NiWQlbhgzenU0Z7Ue+SoaHw2IiDU/BJY=,tag:KcS0fIasKwFVwdCTAizQhA==,type:str]
-    session_encryption_key: ENC[AES256_GCM,data:9txU7w5D9UwfUpWY58lKCI6sthcZHq++pJRiAYUK,iv:UdopYeQgqw/FbPUo9UXYIZZx1BXm5rdkTP7cJEc/5B0=,tag:uQKMZHQURmB622QUxvFrDA==,type:str]
-    storage_encryption_key: ENC[AES256_GCM,data:AdtGzVEzOn4og5GNobwXokA2WKGLyQCUM+U71DTQ,iv:gdTSsv9GxjNFJHvfQGh/kij9KFL0NZ2mjoxZSMTXLb4=,tag:AZ/lgiX9BsfNYNrfDZ3OvA==,type:str]
+    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:Ezs5ruUPp1GSOFl23qwy+dR2EtSVsXUjbbcbNSoT,iv:aUXXTAqA7cS9Hj1aIUt060oNJYJvDn+uBvaCVnKqySM=,tag:o0S+u+vO/DjElxq6mSZ+pg==,type:str]
+    redis_password: ENC[AES256_GCM,data:TD0xsVPi9ZfHtNnFklJUP9vWMRWqLhEFTLceXkDm,iv:K6pd+ItyMWt7J7MGXCkBDwwJFMDTof+PfVHWi6opknI=,tag:cekwMWlO+EwJvMKqYA5MxA==,type:str]
+    authelia_jwt: ENC[AES256_GCM,data:DR7NWKnTtSGGgzM13N1XXJOEWGlv1e0YABjH2cLXirZiFtPqxg0JQvHiYjYuYhkmJuq4LPjkxkiRIbTxWOmry/cYFuNAQiuGqsIk/QY7nB39q9iHZE4z65EZ,iv:lui5KnJ2DcyM0QoOdqZywDXrCFiX5u6vf4Y36ubZeHk=,tag:Mp00/njqV14r6t0DJhk8Bw==,type:str]
+    postgresql_password: ENC[AES256_GCM,data:qqLzhjY5W+9PWycq4JVN9i94Z2iWphEUXWFbjp5g,iv:ItZhDCQql02XB49U+NxmC7G5a4pnFeLWrV+XqhzQKjA=,tag:Wa5FfhktFI+1/Xn1yfxn5g==,type:str]
+    smtp_password: ENC[AES256_GCM,data:7d6TeiGQyUfVGnd9OqNHwWEPl7qjlDI2A4LB5xxF58uHl+YSpRSmCmQGdm6r5m/wsRi0v2WoSCHwXeGN0dayX2aq3IklQqWov36TN0KjZ1/VoPT+D6ns2l+94lf/cDiqDIA5IQ==,iv:FkAWyKDvWBfRWJGZOt3oWb3nCJ6mWfw+y7erNVTpfJo=,tag:Kdc4e1YSLPTVDPZctL69Tg==,type:str]
+    session_encryption_key: ENC[AES256_GCM,data:BzA6/u4LftoMTB8boUazizaiSzZR1pUdIKl2j5Tc,iv:9I8WnRevKje9K1bwSV2i5J2a/QiUJoUCyflwqvODzXs=,tag:/vwnTQAsJ3V1k5oE66lfXg==,type:str]
+    storage_encryption_key: ENC[AES256_GCM,data:j/zX2F7HGFetZpzBK1vatB89Gi2NXd110dQ9tx8J,iv:nVRkklmeDw1LWKmqDFZbXXtbc2JgKkihrXm2Zx5kiWI=,tag:5bryv+687nHJcxySaY71Tw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,14 +21,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5OUhFWjd0VkM1U2V6Si9x
-            RjlkSk54QTUydEZQQUpYaU0ycnNDTFUyS3djClN6MUE3OVR4NzA5WWJud3FoTEVE
-            TjdUa0YxM0hBdkJzYzlqbzFHSmcrNGsKLS0tIGJCb1BqMUl3S1lwWStaQXNxMXM3
-            a0Fkb1hQR0pILzZ4TWd2UlhEazRhQk0KQRaBGPj6rbJEjukEiTQB1lZw8AL3OiHC
-            hdr5Iotx7WtYSIhNN7pWjFE3MJxLh5URh4UM07ivwr1tVJTtuVXN9Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvMmxNY05CbVNwY0JpMVVN
+            d0k1QklRY0FIVGZHSWExeW1CdDNJVHVwZEQ4CkMzSEg0d2VJR2ppOWpwWEhuNXFz
+            ZkRRaEwzWEdGUmpKeVNMSW5SbGd0VVEKLS0tIGZwUXRsei9WOFRFSGJ3V3ZYUlN3
+            WCtLd0Y2VUFYT0dDL0FpbTZqWmh6TFEKCatLvtkfNFvPBHJlQ9Nu1+Zt/vFYTjSM
+            oRXC6MBao8VwHVquz/oJz2it86lk1DhWNCrgXBWM4vi0JbapHc2M5Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-21T06:37:56Z"
-    mac: ENC[AES256_GCM,data:lXFToM66EAQAF6IsUS8heH34Gv1a1kNWDMRT+/Od4GNFBA6YBVFQqAtFae+H1RZFWn82ndSyeGkQ+WDadaFd9VxCZVTcLUsauU5zuOBn9MV+Y6KtVqQuzZtUXYqgQAfdltbbACVPfkPr7oKA+0OZ+nlhcL8DiCjf0nxC9abK+Fk=,iv:nG0xVfierDnQ7fs1FTiQ+FDy5u4Z9f9YvSkANvv6Ac0=,tag:fFtRJu9/b1bsJUJjGhuROA==,type:str]
+    lastmodified: "2022-05-24T08:14:11Z"
+    mac: ENC[AES256_GCM,data:Nohio+GRtmpEve5lix+XsLDa68CvXNHWCb8rS12fLFirlhpdeJUGrohnySvwXwAmJzvQiFQVTiF6xyOUmNT3he5ILtw5tMzYqFTarT1ipwyiWCKjIovSpAW3bGDKtloAg8npmJ+ATKsPLpVx8msnH4Dapu5LHGMRQVTA/s+2/GM=,iv:no+MOmZzD2c6ia7DXmSs8U6cpIEgZKYApVLzJO7DQPQ=,tag:sWsr5NjNwpnLr5qZIter/Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
