--- a/cluster/config/cluster-secrets.sops.yaml
+++ b/cluster/config/cluster-secrets.sops.yaml
@@ -11,6 +11,8 @@ stringData:
     SECRET_TEST_EMAIL: ENC[AES256_GCM,data:jtMt0hP6M/KMSZNes0bCbmRC+tLh,iv:uswjgPpf70hoMSpUcW13HOUk0K4zXnWEnGDHcaPddk8=,tag:8455105ikfio09YFvQEorw==,type:str]
     SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:5DMNf5XIYtagL8LJMNJp3Zxjk+n2,iv:zysTh5rbWGHOPUJTugWycUAGam/zVg+n3UpJ9nRCIQI=,tag:7/th4qr8vHA9QZe82EeXCQ==,type:str]
     SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:oq4XtZ8Icl1pkQblYNxiDdY1lYtYhw==,iv://i3TmT2Z8sTfHQZEoh05gS75IjvLJ7/3N5JHKdC2/c=,tag:cVRIoag7WqZ8P/w+EVm8Og==,type:str]
+    SECRET_SMTP_HOST: ENC[AES256_GCM,data:qMO3fsVw32pTqH7i874KbNO0LBE=,iv:BATmgVdh0waPmq7U6TAp1uw/w9LjuuQDSAL6LpXe2S8=,tag:PnBMl4YKwpG+7DxomPMn9w==,type:str]
+    SECRET_SMTP_PORT: ENC[AES256_GCM,data:BVJP,iv:O+sbyND0H4udlkWsj8zUS9EYeb/zc7JDebJ3QL+PYAY=,tag:6VzqRqynDdnqBnAZZWikaw==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +28,8 @@ sops:
             THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
             TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-21T21:15:37Z"
-    mac: ENC[AES256_GCM,data:mtLt2MTtiniKV6TppyHy8mKruw0mAYyHSf8ngHJDnvnLKsuihmfJ0mxBwAwpVtnEp6BuTOi9Tn4V2kD5rwxE5n/Ivu0yMAV7ClO40u/gOXQLFswIPGzS87fq6qfGGBnZSFZ6wE+z4wnXts2QM1GT+BRZDdnHw/ZWEwfUTCJmyEc=,iv:vxDevn05tbsRTeW8gEH+nXuWu7YKIibx5W7HQm+CUL8=,tag:vpSLHGaiREfRTJwA5si3EA==,type:str]
+    lastmodified: "2022-05-24T08:06:46Z"
+    mac: ENC[AES256_GCM,data:Rk8UTb6tfRHv7xwzXhVmcvHR2TUEGgogyPP3EIx8qk2qr0YmmL+c7py55wLU1OxAAy+MDMtlo2EDaoxnDcAqYK1ugmGqRgkxLTSsK/2VZtv0cIrggQwcSqd5ZCRgwKnmt2JLUuiUmpvWKO+jJYcy/GO0rGFBSYmnKuE519K9iuk=,iv:JWcuhMDtZaXeF57bqGbEJmOem+SHuks/zFwH7WfFHJ8=,tag:KB40/crBd/bGgHSOh6CrCQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
