--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -91,8 +91,8 @@ spec:
         smtp:
           enabled: true
           enabledSecret: true
-          host: smtp.mailbox.org
-          port: 465
+          host: "${SECRET_SMTP_HOST}"
+          port: "${SECRET_SMTP_PORT}"
           username: "${SECRET_ADMIN_EMAIL}"
           sender: "${SECRET_NOTIFICATION_EMAIL}"
           subject: "[${SECRET_PUBLIC_DOMAIN} auth] {title}"
