changed smtp password

--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
       enabled: true
       log:
         ## Level of verbosity for logs: info, debug, trace.
-        level: debug
+        level: info
       theme: dark
       totp:
         issuer: "${SECRET_PUBLIC_DOMAIN}"
