--- a/cluster/config/cluster-secrets.sops.yaml
+++ b/cluster/config/cluster-secrets.sops.yaml
@@ -12,7 +12,7 @@ stringData:
     SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:5DMNf5XIYtagL8LJMNJp3Zxjk+n2,iv:zysTh5rbWGHOPUJTugWycUAGam/zVg+n3UpJ9nRCIQI=,tag:7/th4qr8vHA9QZe82EeXCQ==,type:str]
     SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:oq4XtZ8Icl1pkQblYNxiDdY1lYtYhw==,iv://i3TmT2Z8sTfHQZEoh05gS75IjvLJ7/3N5JHKdC2/c=,tag:cVRIoag7WqZ8P/w+EVm8Og==,type:str]
     SECRET_SMTP_HOST: ENC[AES256_GCM,data:qMO3fsVw32pTqH7i874KbNO0LBE=,iv:BATmgVdh0waPmq7U6TAp1uw/w9LjuuQDSAL6LpXe2S8=,tag:PnBMl4YKwpG+7DxomPMn9w==,type:str]
-    SECRET_SMTP_PORT: ENC[AES256_GCM,data:BVJP,iv:O+sbyND0H4udlkWsj8zUS9EYeb/zc7JDebJ3QL+PYAY=,tag:6VzqRqynDdnqBnAZZWikaw==,type:int]
+    SECRET_SMTP_PORT: ENC[AES256_GCM,data:S3jf,iv:7OpnwmlsdLz3WV3YJc2WS8xBtIBxW9NDPWPanvnUL8M=,tag:lkS3rXhWVWADb2GgiFCLKQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +28,8 @@ sops:
             THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
             TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-24T08:06:46Z"
-    mac: ENC[AES256_GCM,data:Rk8UTb6tfRHv7xwzXhVmcvHR2TUEGgogyPP3EIx8qk2qr0YmmL+c7py55wLU1OxAAy+MDMtlo2EDaoxnDcAqYK1ugmGqRgkxLTSsK/2VZtv0cIrggQwcSqd5ZCRgwKnmt2JLUuiUmpvWKO+jJYcy/GO0rGFBSYmnKuE519K9iuk=,iv:JWcuhMDtZaXeF57bqGbEJmOem+SHuks/zFwH7WfFHJ8=,tag:KB40/crBd/bGgHSOh6CrCQ==,type:str]
+    lastmodified: "2022-05-24T08:45:44Z"
+    mac: ENC[AES256_GCM,data:aP2sDUJJAYzH1XvZO2ycCthBrA9qf8egOuS2Uka/CzkG3c76lASUUaE5Ceb/OfCRRrXjOYQrD+dAMAr+Lig4UYRxOi0vOvFfW9DStwMijNEgkm6v0d91j2Wylef46ogyyQLFAW0mr4xmmAOCHJULYVGXYG5bHtuMmtHfv+1Zcuw=,iv:K1JrpGFa7AvvTdn/EVnnj8lwwADzXwCrH3ZzT3rMvNE=,tag:I2NpM4qg+gMtjaEei9uyCg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
