--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -92,7 +92,7 @@ spec:
           enabled: true
           enabledSecret: true
           host: "${SECRET_SMTP_HOST}"
-          port: "${SECRET_SMTP_PORT}"
+          port: 465
           username: "${SECRET_ADMIN_EMAIL}"
           sender: "${SECRET_NOTIFICATION_EMAIL}"
           subject: "[${SECRET_PUBLIC_DOMAIN} auth] {title}"
