--- a/cluster/config/cluster-secrets.sops.yaml
+++ b/cluster/config/cluster-secrets.sops.yaml
@@ -7,6 +7,7 @@ type: Opaque
 stringData:
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:MgDplwX02G6Z773fHaqLLw==,iv:NAidvOX/3v0+fMpKv/QE7bVenegb/f58tKtAKgWFgHA=,tag:0YUBKjohUNpBqiUF0Z/MrA==,type:str]
     SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:REPBmS68OZ/rND9ZHPDa+E0LlYo=,iv:BpYnR7htujt2KJoPMGj4yLrJNExIJWV/dIeh36qaFFg=,tag:l4RTS/AHIFr6yyG0zeYPEQ==,type:str]
+    SECRET_ADMIN_EMAIL_PASSWORD: ENC[AES256_GCM,data:Trm1l/70MqcgBBBXkSbzsA==,iv:mmwNL3Ylt1IsPZ3B+X5XZl3ftXA3Nwea09BzCarDHl0=,tag:Xl3tnHX9ZKydGRURzdvexg==,type:str]
     SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:bwQgAhcNEbg5eTiMaoKhnLmA/6N2BfhiArmfms1L,iv:+ClRicelfKj9p6jiAWijR7dcKxOJ6BA/Ypm+1D6dKmo=,tag:WuNprAE1FrGTVzlMOf7EVQ==,type:str]
     SECRET_TEST_EMAIL: ENC[AES256_GCM,data:jtMt0hP6M/KMSZNes0bCbmRC+tLh,iv:uswjgPpf70hoMSpUcW13HOUk0K4zXnWEnGDHcaPddk8=,tag:8455105ikfio09YFvQEorw==,type:str]
     SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:5DMNf5XIYtagL8LJMNJp3Zxjk+n2,iv:zysTh5rbWGHOPUJTugWycUAGam/zVg+n3UpJ9nRCIQI=,tag:7/th4qr8vHA9QZe82EeXCQ==,type:str]
@@ -27,8 +28,8 @@ sops:
             THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
             TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-24T08:54:19Z"
-    mac: ENC[AES256_GCM,data:EaSQlHp4+7ruP0Lyf7+r+Hfn90/B6UG+7jOl7Azx8VU7anQ5E58a4GzaUMkWqaQqu34qGbSs/u8q7ilHh0jTC8Sn1VglHd9evWp5ZtV4pdVYf4NB5EuKKK9ivm72TxXivbSrzE5NL9ARfvMkqrp6ot/Kj7qrjvfUHIZ9bzqG9fI=,iv:0e7xKNwS345Z5HD+UzzOvywU5uGlBiQRv39VPTS4Uc4=,tag:md1DFW3vQlvK4QMnoFLZiw==,type:str]
+    lastmodified: "2022-05-24T09:04:43Z"
+    mac: ENC[AES256_GCM,data:pMLZ29KY+FcCVbDef4E+NYeZHTAfbvZ0uOnrI7PugEeN6aMCMy//wjs1KCkt7RFovwWUeXrNZYYM6/8cYCCCP+7tJ+Gcrsix86OH2WiV7SG2HKSzFiaSbNkwag98WYAZKrKadr6+L0G5BLqzK1QsAL4YeMdTSQmCOiruyo02bRU=,iv:rcCxRbSkImX9Bev6PoaRwxSZU3ZotB9qbK7yS1VjxFM=,tag:z/WQc9VpQQFIOMnYbqUUFA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
