--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -93,6 +93,7 @@ spec:
           enabledSecret: true
           host: "${SECRET_SMTP_HOST}"
           port: 465
+          identifier: ${SECRET_PUBLIC_DOMAIN}
           username: "${SECRET_ADMIN_EMAIL}"
           sender: "${SECRET_NOTIFICATION_EMAIL}"
           subject: "[${SECRET_PUBLIC_DOMAIN} auth] {title}"
