--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
         enabled: true
         storageClass: longhorn
         accessMode: ReadWriteOnce
+        size: 1Gi
         mountPath: /data
         retain: true
       usb:
