maybe its not needed?

--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -23,9 +23,9 @@ spec:
       tag: 1.25.1
     env:
       TZ: "${TIMEZONE}"
-    config:
-      serial:
-        port: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2490275-if00
+    # config:
+    #   serial:
+    #     port: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2490275-if00
     securityContext:
       privileged: true
     persistence:
