persistence not persistance

--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
       tag: 2022.5.4
     env:
       TZ: "${TIMEZONE}"
-    persistance:
+    persistence:
       config:
         enabled: true
         storageClass: longhorn
