mosquitto broker port

--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -25,14 +25,14 @@ spec:
       TZ: "${TIMEZONE}"
       ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
       ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: deconz
-      ZIGBEE2MQTT_CONFIG_MQTT_SERVER: mqtt://mosquitto.default.svc.cluster.local
+      ZIGBEE2MQTT_CONFIG_MQTT_SERVER: mqtt://mosquitto.default.svc.cluster.local:1883
       ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: debug
     config:
       serial:
         port: /dev/ttyACM0
       mqtt:
         base_topic: zigbee2mqtt
-        server: mqtt://mosquitto.default.svc.cluster.local
+        server: mqtt://mosquitto.default.svc.cluster.local:1883
       advanced:
         log_level: debug
     securityContext:
