--- a/cluster/apps/default/tdarr/helm-release.yaml
+++ b/cluster/apps/default/tdarr/helm-release.yaml
@@ -45,3 +45,8 @@ spec:
         server: "${NAS0_IP}"
         path: /volume1/TV-Series
         mountPath: /tv
+    # to avoid permissions issues on volume
+    podSecurityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
