matrix password fix

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -35,7 +35,8 @@ spec:
       host: matrix-synapse-postgres
       port: 5432
       username: synapse
-      existingSecretPasswordKey: matrix-synapse-postgresql-secrets
+      existingSecret: matrix-synapse-postgresql-secrets
+      existingSecretPasswordKey: postgres-password
       database: synapse
     redis:
       enabled: false
