--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -16,6 +16,11 @@ spec:
         name: ananace-charts
         namespace: flux-system
       interval: 5m
+  dependsOn:
+    - name: matrix-synapse-postgres
+      namespace: comms
+    - name: matrix-synapse-redis
+      namespace: comms
   install:
     createNamespace: true
   values:
