matrix config fixes

--- a/cluster/apps/comms/postgresql/helm-release.yaml
+++ b/cluster/apps/comms/postgresql/helm-release.yaml
@@ -27,6 +27,8 @@ spec:
       database: synapse
       username: synapse
       existingSecret: matrix-synapse-postgresql-secrets
+      secretKeys: 
+        userPasswordKey: postgres-password
     primary:
       persistence:
         enabled: true
