--- a/cluster/apps/comms/redis/secret.sops.yaml
+++ b/cluster/apps/comms/redis/secret.sops.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: matrix-synapse-redis-secrets
-    namespace: auth
+    namespace: comms
 type: Opaque
 stringData:
     redis_password: ENC[AES256_GCM,data:bMLWzLij7zZQihS2yHWrylJQ06LTVHeSNXjgTj8r,iv:6y24UsxSQtjkx13e0eWMiT0CfhO3JPa3cqdXuP8IsTg=,tag:GNvc7VE3IMfS+yrUulZ6ZA==,type:str]
@@ -21,8 +21,8 @@ sops:
             OXBBOG9vS0RzZFVqdjZ2VTR1Y0oyc00KlgpasSbXpCJWc1VkQtxd7VbrjhwnHmBJ
             xD+e1DKDr8Hw2ywswsaL6svmqgS6BhD9kRf1mkuOFerWHPywQ0cnzA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-02T19:44:53Z"
-    mac: ENC[AES256_GCM,data:2c/ItxvxAGbBZIUrWoeX+SpGJRz6baa7YiiHKkO5D8hsFjJXwG30/Ax+ZDk0AcSy0JBHSz03COQPkYXloifCwwfjJSpVAxyPKoKz38E0i3s0Cqq1EnqkkrHiOINpD55EzBoSxkO1SnraZ6Ts3k8L2LMsfEVbvIDVyI99dllgEEU=,iv:J1fam5rc7Lswzzd4pIap4Izi2Ubfh8b9i+c1MSacYBU=,tag:yLYmN8Dxy30YODi8iP7qjw==,type:str]
+    lastmodified: "2022-06-02T20:16:42Z"
+    mac: ENC[AES256_GCM,data:2SfI0CzlNHCVRgSdRrZQNqzuVik36T5pmyJafLfgM7oLhHhBkSt0NNGmVFoge0ejgxbR5jni2mm/bvVPycdC1TmI/Ja/qDVLtOGLgkQPAbDr8Yium054c+IKr/MEGTTYbgrdzRKwBQuZzF+bZkkKA5UvqmDpH6epJlw6UVrf3g4=,iv:WobxurFhI2Wn4BYq/90awPVKoxEIzJTZA2qqgNCw2l8=,tag:vhLBl131FjC6CjXaY5hJ6Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
