--- a/cluster/apps/comms/postgresql/secret.sops.yaml
+++ b/cluster/apps/comms/postgresql/secret.sops.yaml
@@ -5,7 +5,8 @@ metadata:
     namespace: comms
 type: Opaque
 stringData:
-    postgres-password: ENC[AES256_GCM,data:TCaSIwwWBkE6WyjfYLzoUX3gbDKuVPKGxchu6vzR,iv:+STgXx6HLXxHTXpDZhjuUTXeBgfW//+FgD+o85dmw3I=,tag:S9oDVm53fWO7tw3gQbN1hQ==,type:str]
+    postgres-synapse-password: ENC[AES256_GCM,data:4PAglOAVGQY1vYse6/yadlx8cGnZQpW0MFagAyjm,iv:7Fyg14/ULCI3ubot3krKTKkW+QVhyCXKuwzlm6t1zZo=,tag:vU1ri0b55HtSBNvs2TbcbA==,type:str]
+    postgres-admin-password: ENC[AES256_GCM,data:0+Jal/vF1nNyg+TKHR9aMMsITZCo72XzlBVnFoZe,iv:jWcBPAmdfErpVWT7T/JxsiNvvuWQZFzuozIFWZEKTCw=,tag:W8AeIuwXKsYFBA6zpAIgYQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             MmY1UnBRSDJsS1M4WHMvZHNvMXlHWnMKBpUsdSOZwqf49Xij1H+FF0wIoN7oSNQV
             E3bR36yHt8Ip2conIGyvdAZkW5TkKi32hzmrIJ3AXhsXha2GI6WwUw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-02T19:43:21Z"
-    mac: ENC[AES256_GCM,data:AQ+nciseiDYl1RQo2K2TjeRkhbMC7+1Sz2obeOecOLtLHKmRe1Zj7vJmEH/AKi2TosRKLa8Ws7S0RyIG4Y61/SIcY8XLDEaDj46fQP8d1PupdkxA6phDwGIsbxPc02Y/NPyR1VEsadmpwVPIdMW2mPPQtoGRabRrLC0Rkp70n+U=,iv:c2WSTg65RFWfBfy9TBv18IMEeNAsduv4IN4s4csDFUE=,tag:0uMilIOhakedlThwfI86tg==,type:str]
+    lastmodified: "2022-06-02T20:21:39Z"
+    mac: ENC[AES256_GCM,data:YGpIW6J3adkCPwFjXOZBe2VxlweGW25HE7k5q1jyv2XUL9LpTIjTQqTSuxRl4KTRobOE0QTrHFZYyPW5itdX7aCLq11p9KsDNWjXaBlse426aLa7Ag0b1gLVYpekLWuswis3FIYGhLo0YGTSMnLXL6sjXtF8MLPR1TTaWV2Q6n8=,iv:DtiUqul6RA/NXVEHetYGWnLEUOGcW6jxkHhNPphtgtU=,tag:12JCcyPjmgWtzZL0hbKzPw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
