--- a/cluster/apps/comms/postgresql/secret.sops.yaml
+++ b/cluster/apps/comms/postgresql/secret.sops.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
     postgres-synapse-password: ENC[AES256_GCM,data:4PAglOAVGQY1vYse6/yadlx8cGnZQpW0MFagAyjm,iv:7Fyg14/ULCI3ubot3krKTKkW+QVhyCXKuwzlm6t1zZo=,tag:vU1ri0b55HtSBNvs2TbcbA==,type:str]
-    postgres-admin-password: ENC[AES256_GCM,data:0+Jal/vF1nNyg+TKHR9aMMsITZCo72XzlBVnFoZe,iv:jWcBPAmdfErpVWT7T/JxsiNvvuWQZFzuozIFWZEKTCw=,tag:W8AeIuwXKsYFBA6zpAIgYQ==,type:str]
+    postgres-password: ENC[AES256_GCM,data:jGRJt4uM8vLEi6y7Fy7utBeYBXSWSEWS2fThienZ,iv:CzH6Ev+beN9sznosgMUi+bFAYL/sVaqpFCznu1NxMBM=,tag:2O7ZGjMhBsYcUdV2qq+ATg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             MmY1UnBRSDJsS1M4WHMvZHNvMXlHWnMKBpUsdSOZwqf49Xij1H+FF0wIoN7oSNQV
             E3bR36yHt8Ip2conIGyvdAZkW5TkKi32hzmrIJ3AXhsXha2GI6WwUw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-02T20:21:39Z"
-    mac: ENC[AES256_GCM,data:YGpIW6J3adkCPwFjXOZBe2VxlweGW25HE7k5q1jyv2XUL9LpTIjTQqTSuxRl4KTRobOE0QTrHFZYyPW5itdX7aCLq11p9KsDNWjXaBlse426aLa7Ag0b1gLVYpekLWuswis3FIYGhLo0YGTSMnLXL6sjXtF8MLPR1TTaWV2Q6n8=,iv:DtiUqul6RA/NXVEHetYGWnLEUOGcW6jxkHhNPphtgtU=,tag:12JCcyPjmgWtzZL0hbKzPw==,type:str]
+    lastmodified: "2022-06-02T20:25:45Z"
+    mac: ENC[AES256_GCM,data:Gc16ODBsCDXrytJjccu7yMrVKKp4TqSZQznHaXDuloQBbd3mvNh9VHgTuePAm1FiVG+EQzjIQ27TbQ6qiX7s7Pbg6YHM/CvtAqbzGWhO6DXhQqVB+EgipEvCd6cTybepIt7D4eTbv6KjHxFCtn8JLpTLKUnOp2LhKHPF6QaacFU=,iv:0dDaV//zXASnbhi5bOukAjR7RId0L35ejB52z0iqXOU=,tag:pllnL/pEBJKSwtArq8bUYQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
