postgres helm ignoring password keys

--- a/cluster/apps/comms/postgresql/secret.sops.yaml
+++ b/cluster/apps/comms/postgresql/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: comms
 type: Opaque
 stringData:
-    postgres-synapse-password: ENC[AES256_GCM,data:4PAglOAVGQY1vYse6/yadlx8cGnZQpW0MFagAyjm,iv:7Fyg14/ULCI3ubot3krKTKkW+QVhyCXKuwzlm6t1zZo=,tag:vU1ri0b55HtSBNvs2TbcbA==,type:str]
+    password: ENC[AES256_GCM,data:Y47hzy4iqrpn5ECe4UPFk0bU3aZ6g+YdmyQ02e9p,iv:xyMUFPHB5LMcd01mEzzEM64TgCEEljA31uULjN05CJw=,tag:dJH24I2O0kZwSI7g8OiJCw==,type:str]
     postgres-password: ENC[AES256_GCM,data:jGRJt4uM8vLEi6y7Fy7utBeYBXSWSEWS2fThienZ,iv:CzH6Ev+beN9sznosgMUi+bFAYL/sVaqpFCznu1NxMBM=,tag:2O7ZGjMhBsYcUdV2qq+ATg==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             MmY1UnBRSDJsS1M4WHMvZHNvMXlHWnMKBpUsdSOZwqf49Xij1H+FF0wIoN7oSNQV
             E3bR36yHt8Ip2conIGyvdAZkW5TkKi32hzmrIJ3AXhsXha2GI6WwUw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-02T20:25:45Z"
-    mac: ENC[AES256_GCM,data:Gc16ODBsCDXrytJjccu7yMrVKKp4TqSZQznHaXDuloQBbd3mvNh9VHgTuePAm1FiVG+EQzjIQ27TbQ6qiX7s7Pbg6YHM/CvtAqbzGWhO6DXhQqVB+EgipEvCd6cTybepIt7D4eTbv6KjHxFCtn8JLpTLKUnOp2LhKHPF6QaacFU=,iv:0dDaV//zXASnbhi5bOukAjR7RId0L35ejB52z0iqXOU=,tag:pllnL/pEBJKSwtArq8bUYQ==,type:str]
+    lastmodified: "2022-06-02T20:40:48Z"
+    mac: ENC[AES256_GCM,data:o6eRU9E4eyevVNXiNPdOYexxUgoU5aWKIxtqbE2MKt3MDe9rCTfDvoyeHko0C6S4k6Cy9qUKgkqw65Y68VCkP4JzohXvIyCBh+bRJgLstAV1x5Ye2yHbxs9iU10TMFXzwsTVv115EhJPWinTlCQYNpmCc+OhfoI4ccVlMrOsruQ=,iv:MFVyMOzqPtSNd2zz/0mGhfkOWjRGH2zcMLpwpuzjXAE=,tag:5OV2/dBtK5ecXesFJuN1dw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
