--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -31,9 +31,9 @@ spec:
     publicServerName: matrix.${SECRET_DOMAIN}
     wellknown:
       enabled: true
-    signingkey:
-      job:
-        enabled: false
+    # signingkey:
+    #   job:
+    #     enabled: false
     postgresql:
       enabled: false
     externalPostgresql:
