--- a/cluster/apps/networking/external-dns/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
     txtPrefix: "k8s."
     txtOwnerId: "default"
     domainFilters:
-      - "${SECRET_DOMAIN}"
+      - "${SECRET_PUBLIC_DOMAIN}"
     resources:
       requests:
         memory: 100Mi
