--- a/cluster/apps/comms/matrix-synapse/secret.sops.yaml
+++ b/cluster/apps/comms/matrix-synapse/secret.sops.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: matrix-synapse-redis-secrets
+    name: matrix-synapse-secrets
     namespace: comms
 type: Opaque
 stringData:
-    redis_password: ENC[AES256_GCM,data:bMLWzLij7zZQihS2yHWrylJQ06LTVHeSNXjgTj8r,iv:6y24UsxSQtjkx13e0eWMiT0CfhO3JPa3cqdXuP8IsTg=,tag:GNvc7VE3IMfS+yrUulZ6ZA==,type:str]
+    redis-password: ENC[AES256_GCM,data:5xAzJILcgbN2LYIo3e8kHU4rKSkCKkPoAqys3CQy,iv:i5i1vB0dd/kkCufT4G4olTF9YgFzBvK/x8ew1pDPQ64=,tag:EocDmr4tQl3flXofg8trFQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             OXBBOG9vS0RzZFVqdjZ2VTR1Y0oyc00KlgpasSbXpCJWc1VkQtxd7VbrjhwnHmBJ
             xD+e1DKDr8Hw2ywswsaL6svmqgS6BhD9kRf1mkuOFerWHPywQ0cnzA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-02T20:16:42Z"
-    mac: ENC[AES256_GCM,data:2SfI0CzlNHCVRgSdRrZQNqzuVik36T5pmyJafLfgM7oLhHhBkSt0NNGmVFoge0ejgxbR5jni2mm/bvVPycdC1TmI/Ja/qDVLtOGLgkQPAbDr8Yium054c+IKr/MEGTTYbgrdzRKwBQuZzF+bZkkKA5UvqmDpH6epJlw6UVrf3g4=,iv:WobxurFhI2Wn4BYq/90awPVKoxEIzJTZA2qqgNCw2l8=,tag:vhLBl131FjC6CjXaY5hJ6Q==,type:str]
+    lastmodified: "2022-06-02T23:52:48Z"
+    mac: ENC[AES256_GCM,data:WWrZRAz+POBl8VOvPi5u/4+S1s4/QpeX2EfKTFCW70bPzef86L6IPkUWUQzYjB0m2CKxTVbaPCxCpMr64gZlx9auRLGqeLwsBa4sYBP94WCGWLB2mwNbgruAL7I4cy/RUXqdspY8NedGCPi/BmlKC22tH19IiRMnh1qnDITspyk=,iv:tc0gzOWO3LrJtxVpYVpfpS7sN2QdpDBeR3EoOCDyAmo=,tag:evTu5/rENQcBevd2+ZvXtA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
