--- a/cluster/apps/comms/matrix-synapse/secret.sops.yaml
+++ b/cluster/apps/comms/matrix-synapse/secret.sops.yaml
@@ -6,6 +6,7 @@ metadata:
 type: Opaque
 stringData:
     redis-password: ENC[AES256_GCM,data:5xAzJILcgbN2LYIo3e8kHU4rKSkCKkPoAqys3CQy,iv:i5i1vB0dd/kkCufT4G4olTF9YgFzBvK/x8ew1pDPQ64=,tag:EocDmr4tQl3flXofg8trFQ==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:qQfOKXCFa/jaS5TtEzfAlOyrXQIOpBgC/eFro2yg,iv:zsUjzmKucB3Xw8OsYtJC5IkvwDwlTbsTN4SGuMcdLLk=,tag:O8ry9G9LFEk786dOj2rbJQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             OXBBOG9vS0RzZFVqdjZ2VTR1Y0oyc00KlgpasSbXpCJWc1VkQtxd7VbrjhwnHmBJ
             xD+e1DKDr8Hw2ywswsaL6svmqgS6BhD9kRf1mkuOFerWHPywQ0cnzA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-02T23:52:48Z"
-    mac: ENC[AES256_GCM,data:WWrZRAz+POBl8VOvPi5u/4+S1s4/QpeX2EfKTFCW70bPzef86L6IPkUWUQzYjB0m2CKxTVbaPCxCpMr64gZlx9auRLGqeLwsBa4sYBP94WCGWLB2mwNbgruAL7I4cy/RUXqdspY8NedGCPi/BmlKC22tH19IiRMnh1qnDITspyk=,iv:tc0gzOWO3LrJtxVpYVpfpS7sN2QdpDBeR3EoOCDyAmo=,tag:evTu5/rENQcBevd2+ZvXtA==,type:str]
+    lastmodified: "2022-06-03T00:23:34Z"
+    mac: ENC[AES256_GCM,data:F60ofQQgORS2uRf11DsDdkR0TOiCsbEV/NtOkcpQElzjs5iniOZBKCTkeuGbeFUOHe3+9XbdNGBlMkZ/7qwLaxS8wrC20UJQKZX04v4PLQRQtmOzKT79Rq4S8SL6M+uVhSMI6w5yyMqLIwPrBwTawTqsY798KQQPWscMBma64jU=,iv:tlefWvy3O4wq7aIBJx2HT31D8a6MjNlAm8/WNhZnl5Y=,tag:H2N7qeXQCQAHektGRPcN3Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
